# Audionet

./: .gitignore  CMakeLists.txt  README.md
docs/: index.rst
include/miniaudio/: miniaudio.h
scripts/: client.sh  run.sh  server.sh  test_mic.sh  test_sound.sh
src/: client.c  logger.h  main.c  server.c
src/asocket/: asocket.c  asocket.h
src/audio/: audio.c  audio.h  miniaudio.c
src/audio/internal/: miniaudio.c  multi_waveform_data_source.c  multi_waveform_data_source.h
src/audio_socket/: audio_socket.c  audio_socket.h
src/audio_socket/layers/link/: link_layer.c  link_layer.h
src/audio_socket/layers/physical/: audio_encoding.c  audio_encoding.h  physical_layer.c  physical_layer.h
src/audio_socket/layers/transport/: transport_layer.c  transport_layer.h
src/fft/: fft.c  fft.h
src/utils/: logger.h  minmax.h  platform.h  utils.c  utils.h
